infra/k8s/tickets-mongo-delp.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: tickets-mongo-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo 
  template:
    metadata:
      labels:
        app: tickets-mongo 
    spec:
      containers:
        - name: tickets-mongo
          image: mongo 
---
apiVersion: v1
kind: Service 
metadata:
  name: tickets-mongo-srv 
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: db 
      protocol: TCP 
      port: 27017
      targetPort: 27017
