infra/k8s/ingress-srv.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/user/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port:
              number: 3000

      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-srv
            port:
              number: 3000

      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-srv 
            port:
              number: 3000
---
